# PEPS_IMAG

./: .gitignore  CMakeLists.txt  README  questions  questions-Todo
IgPeps/: .gitignore  IgPeps.sln
IgPeps/IgPeps/: App.xaml  App.xaml.cs  IgPeps.csproj  IgPeps_TemporaryKey.pfx  Page1.xaml  Page1.xaml.cs  Vue.xaml  Vue.xaml.cs
IgPeps/IgPeps/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MvcApplication1/: MvcApplication1.sln
MvcApplication1/MvcApplication1/: Global.asax.cs  MvcApplication1.csproj  Web.config
MvcApplication1/MvcApplication1/App_Start/: AuthConfig.cs  BundleConfig.cs  WebApiConfig.cs
MvcApplication1/MvcApplication1/Content/: Site.css
MvcApplication1/MvcApplication1/Controllers/: AccountController.cs  HomeController.cs
MvcApplication1/MvcApplication1/Filters/: InitializeSimpleMembershipAttribute.cs
MvcApplication1/MvcApplication1/Models/: AccountModels.cs
MvcApplication1/MvcApplication1/Properties/: AssemblyInfo.cs
MvcApplication1/MvcApplication1/Scripts/: site.js
MvcApplication1/MvcApplication1/Views/Account/: ExternalLoginConfirmation.cshtml  Login.cshtml  Manage.cshtml  Register.cshtml  _ChangePasswordPartial.cshtml  _RemoveExternalLoginsPartial.cshtml  _SetPasswordPartial.cshtml
MvcApplication1/MvcApplication1/Views/Home/: About.cshtml  Backtest.cshtml  Change.cshtml  Couverture.cshtml  Historique.cshtml  Index.cshtml  forward.cshtml
MvcApplication1/MvcApplication1/Views/Shared/: _Layout.cshtml  _LayoutTmp.cshtml
PEPS/Wrapper/: Wrapper.cpp  Wrapper.h
csv/: historiqueEuroStoxx50.csv  historiqueHangSengChinaEntreprises.csv  historiqueNikkei225.csv  historiqueS&P-ASX200.csv  historiqueS&P500.csv
data/: README  backTestHedgingNumber100MC10000.csv  backTestHedgingNumber10MC10000.csv  backTestHedgingNumber300MC10000.csv  backTestHedgingNumber500MC10000.csv  backtest.csv  dataPEPS.csv  forwardtest.csv  test.csv  test1.csv  testMC  testRebalancementBiMensuel.csv  testRebalancementJournalierParamUpdate.csv  testRebalancementParamUpdate.csv
data/testsDiscretisationStep/: backTestDiscrStep00000001.csv  backTestDiscrStep0000001.csv  backTestDiscrStep000001.csv  backTestDiscrStep00001.csv  backTestDiscrStep0001.csv  backTestDiscrStep001.csv  backTestDiscrStep01.csv  backTestDiscrStep03.csv  backTestDiscrStep05.csv  backTestDiscrStep07.csv  backTestDiscrStep09.csv  backTestDiscrStep1.csv
data/testsDiscretizationStep/: backTestDisrcStep00000001.csv  backTestDisrcStep0000001.csv  backTestDisrcStep000001.csv  backTestDisrcStep00001.csv  backTestDisrcStep0001.csv  backTestDisrcStep001.csv  backTestDisrcStep01.csv  backTestDisrcStep03.csv  backTestDisrcStep05.csv  backTestDisrcStep07.csv  backTestDisrcStep09.csv  backTestDisrcStep1.csv  backTestDisrcStepOptimal.csv
data/testsHedgingNbRebal10000/: backTestHedgingNumber250MC10000.csv  backTestHedgingNumber50MC10000.csv
data/testsMC/: Params.txt  backTestMC10000.csv  backTestMC20000.csv  backTestMC5000.csv  backTestMC50000.csv
doc/: RapportBeta.tex
doc/Modele/: hedgingModel.aux  hedgingModel.out  hedgingModel.tex  hedgingModel.toc
lib/: .gitignore  README
lib/pnlLib/man/html/: idxmake.dvi  pnl-manual.4ct  pnl-manual.4dx  pnl-manual.4ix  pnl-manual.4tc  pnl-manual.aux  (+23 more)
src/CCR_Model/: CMakeLists.txt  main.cpp
src/CCR_Model/Model/: Tree_model.cpp  Tree_model.hpp
src/Pricer/: CMakeLists.txt  Marche.cpp  Marche.hpp  Multimonde.cpp  Multimonde.hpp  MultimondeFactory.cpp  MultimondeFactory.hpp  MultimondeFactoryDLL.cpp  MultimondeFactoryDLL.hpp  infoMultimonde.hpp  test.cpp
src/Pricer/FinancialProducts/: Asset.cpp  Asset.hpp  Call.cpp  Call.hpp  Multimonde.cpp  Multimonde.hpp  ProductGen.cpp  ProductGen.hpp
src/Pricer/FinancialProducts/Asset/: Asset.cpp  Asset.hpp  AssetList.cpp  AssetList.hpp  ChangeZC.cpp  ChangeZC.hpp
src/Pricer/FinancialProducts/PayOffs/: PayOffFunctions.cpp  PayOffFunctions.hpp
src/Pricer/Parser/: ParseCSV.cpp  ParseCSV.h
src/Pricer/PayOffs/: PayOffFunctions.cpp  PayOffFunctions.hpp
src/Pricer/Pricing/: MonteCarloPricer.cpp  MonteCarloPricer.hpp  PricerGen.cpp  PricerGen.hpp
src/Pricer/ProductInfo/: infoMultimonde.hpp
src/Pricer/Produit/: Asset.cpp  Asset.hpp  Multimonde.cpp  Multimonde.hpp  ProductGen.cpp  ProductGen.hpp
src/Pricer/RateModels/: ConstantRateModel.cpp  ConstantRateModel.hpp  GamTauxRateModel.cpp  GamTauxRateModel.hpp  RateModelGen.cpp  RateModelGen.hpp
src/Pricer/SimulationModels/: BlackScholesModel.cpp  BlackScholesModel.hpp  ModelGen.cpp  ModelGen.hpp
src/Pricer/SimulationModels/SimuChange/: BlackScholesChangeModel.cpp  BlackScholesChangeModel.hpp
src/Pricer/SimulationModels/SimuIndex/: BlackScholesIndexModel.cpp  BlackScholesIndexModel.hpp
src/Pricer/Stats/: StatsFactory.cpp  StatsFactory.h
src/Pricer/Stats/Parser/: ParseCSV.cpp  ParseCSV.h
src/Pricer/Tests/: Test.cpp  testHedgingCall.cpp  testHedgingMultimonde.cpp  testHedgingMultimondeWithMarket.cpp  testMultimonde.cpp  testMultimondeHedging.cpp  testPricerMultimonde.cpp
src/Pricer/Tests/HedgingTest/: testHedgingCall.cpp  testHedgingMultimonde.cpp  testHedgingMultimondeBT.cpp  testHedgingMultimondeFT.cpp  testHedgingWithSeveralParamUpdates.cpp  test_HedgingMultimondeFT.cpp
src/Pricer/Tests/MarketTests/: testMarket.cpp
src/Pricer/Tests/Parser/: dataPEPS.csv  testPEPS.csv  testParseCSV.cpp  testParseCSV2.cpp  testParserNumberMax.cpp
src/Pricer/Tests/PayOffs/: testPayOffMultimonde21.cpp
src/Pricer/Tests/PricerTest/: testCall-MCBS.cpp  testDeltaCall.cpp  testDeltaMultimonde.cpp  testMonteCarlo.cpp  testPricerMultimonde.cpp
src/Pricer/Tests/RateModelsTest/: testConstantRateModel.cpp  testGamTauxRateModel.cpp
src/Pricer/Tests/SimulationModels/: BlackScholesTest.cpp
src/Pricer/Tests/StatsFactoryTests/: testStats.cpp
src/Pricer/Tests/Unitaires/: creationAsset.cpp  creationChangeZC.cpp  creationListAsset.cpp  creationPricer.cpp  creationRateModel.cpp  creationSimuModel.cpp
stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
